--- a/pp.html
+++ b/pp.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>SOKRA Academy Tnc and Privacy policy<title></head>
 <body>
-<p>SOKRA Academy values your trust. In order to honour that trust, SOKRA Academy
+<pre>SOKRA Academy values your trust. In order to honour that trust, SOKRA Academy
 adheres to ethical standards in gathering, using, and safeguarding any
 information you provide.
 This privacy policy governs your use of the application ‘SOKRA Academy’
@@ -27,6 +27,6 @@ SOKRA Academy may use this Information to contact you from time to time, to
 provide you with the Services, important information, required notices and
 marketing promotions. SOKRA Academy will request you when it need more
 information that personally identifies you (personal information) or allows us to
-contact you.</p>
+contact you.</pre>
 </body>
 </html>
