--- a/pp.html
+++ b/pp.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>SOKRA Academy Tnc and Privacy policy<title></head>
+<head><title>SOKRA Academy Tnc and Privacy policy</title></head>
 <body>
 <pre>SOKRA Academy values your trust. In order to honour that trust, SOKRA Academy
 adheres to ethical standards in gathering, using, and safeguarding any
