--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <!--end col-md-6-->
                         <div class="col-sm-6">
                             <div class="d-flex h-100 align-items-end" style="padding-bottom: 100px" >
-                                <img  src="assets/img/mobile-body-aboutUs.jpg" alt="" data-animate=" ts-fadeInLeft ts-z-index__1"  
+                                <img  src="assets/img/mobile-body-aboutUs.png" alt="" data-animate=" ts-fadeInLeft ts-z-index__1"  
                         data-animate="ts-fadeInUp" class="w-100">
                             </div>
                         </div>
