--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
                        <div class="w3-container">
                           <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
                                 <div class="card-body">
-                                    <strong class="ts-opacity__50">Contacthi</strong>
+                                    <strong class="ts-opacity__50">Contact</strong>
                                     <h4 class="mt-3">Jyothi</h4>
-                                    <p>Morbi et nisl a sapien malesuada scelerisque. Suspendisse tempor </p>
+                                    <p>Phone number:********</p>
                                     <!-- <a href="https://play.google.com/store/apps/details?id=com.sokra.academy&hl=en_IN&gl=US" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalCourse"style="color:#222222">Join Course</a> -->
                                 </div>
                         </div>
