pop-up box 08-12

--- a/index.html
+++ b/index.html
@@ -460,20 +460,32 @@
 
                     </div>
                     <!--end card-columns-->
-                  <div class="w3-container" align="Center">
-                  <button style="color:#222222"class="btn btn-primary" onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Join Us</button>
+                  <div class="w3-container" align="Center" >
+                        <button align="text-right" style="color:#222222"class="btn btn-primary" onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Join Us</button>
 
-                    <div id="id01" class="w3-modal"align="Center">
-                     <div class="w3-modal-content">
+                  
+                    <div id="id01" class="w3-modal" align="Center" style="padding-top: 200px" class="mb-0 ts-opacity__100">
+                     <div class="w3-modal-content" style="width: 500px">
                        <div class="w3-container">
                           <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-                                <div class="card-body">
-                                    <strong class="ts-opacity__50">Contact</strong>
-                                    <h4 class="mt-3">Jyothi</h4>
-                                    <p>Phone number:********</p>
-                                    <!-- <a href="https://play.google.com/store/apps/details?id=com.sokra.academy&hl=en_IN&gl=US" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#modalCourse"style="color:#222222">Join Course</a> -->
+<!--                                  <div class="card" data-animate="ts-fadeInUp" data-delay=".2s">
+ -->                            <div class="card-body">
+                                        <h4 class="mb-0 ts-opacity__80">
+                                        Contact</h4>
+                                <div class="d-flex align-items-center">
+                                        
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.jpg"></figure>
+                                    <h5>Priyanka</h5>
                                 </div>
-                        </div>
+                                <p class="mb-0">
+                                    Phone Number:********<br>
+                                    Email us:abc@.com<br>
+
+                                </p>
+                            </div>
+                            <!--end card-body-->
+<!--                         </div>
+ -->                        </div>
                     </div>
                    </div>
                   </div>
