--- a/index.html
+++ b/index.html
@@ -476,8 +476,9 @@
                                         
                                   <!--   <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.jpg"></figure> -->
 <!--                                     <h5>Priyanka</h5>
- -->                                </div>
+ -->                                </div><br>
                                 <p class="mb-0">
+                                    <h4>PRIYANKA NALAWADE<br></h4>
                                     Phone Number:8459303920<br>
                                     Email us:support@sokra.academy<br>
 
