--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <img src="assets/img/SokraLogo.png"  alt="">
                     </a>
                     <!--end navbar-brand--><!-- style="height: auto; width:auto" -->
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" style="color:#ffffff" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <!--end navbar-toggler-->
@@ -172,7 +172,7 @@
                     <!--end ts-title-->
                     <div class="row">
                         <div class="col-md-4">
-                            <div class="card ts-border-radius__lg" data-animate="ts-fadeInUp">
+                            <div  data-animate="ts-fadeInUp">
                                 <div class="card-img ts-height__600px responsive" 
                                 data-bg-image="assets/img/mobile-body-mycourses.png">
                                     
@@ -189,7 +189,7 @@
                         <!--end col-md-4-->
 
                         <div class="col-md-4"style="padding-top: 90px">
-                            <div class="card ts-border-radius__lg" data-animate="ts-fadeInUp" data-delay=".1s">
+                            <div data-animate="ts-fadeInUp" data-delay=".1s">
                                 <div class="card-img ts-height__600px responsive" 
                                 data-bg-image="assets/img/mobile-body-myCourses2.png">
                                     
@@ -204,7 +204,7 @@
                         </div>
                         <!--end col-md-4-->
                         <div class="col-md-4"style="padding-top: 180px">
-                            <div class="card ts-border-radius__lg" data-animate="ts-fadeInUp" data-delay=".2s">
+                            <div data-animate="ts-fadeInUp" data-delay=".2s">
                                 <div class="g ts-height__600px responsive" 
                                 data-bg-image="assets/img/mobile-body-myCourses3.png"></div>
                                 <!-- <div class="card-body">
@@ -317,7 +317,7 @@
                         <div class="card" data-animate="ts-fadeInUp">
                             <div class="card-body">
                                 <div class="d-flex align-items-center">
-                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/Dr.VasudhaVaidya.jpg"></figure>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/Dr.VasudhaVaidya.JPG"></figure>
                                     <h5>Dr.Vasudha Vaidya</h5>
                                 </div>
                                 <p class="mb-0">
@@ -344,7 +344,7 @@
                         <div class="card" data-animate="ts-fadeInUp" data-delay=".2s">
                             <div class="card-body">
                                 <div class="d-flex align-items-center">
-                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.jpg"></figure>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.JPG"></figure>
                                     <h5>Sharayu Kadam</h5>
                                 </div>
                                 <p class="mb-0">
@@ -360,7 +360,7 @@
                         <div class="card" data-animate="ts-fadeInUp" data-delay=".3s">
                             <div class="card-body">
                                 <div class="d-flex align-items-center">
-                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/KishoriLondhe.jpg"></figure>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/KishoriLondhe.JPG"></figure>
                                     <h5>Kishori Londhe</h5>
                                 </div>
                                 <p class="mb-0">
@@ -381,7 +381,7 @@
                         <div class="card" data-animate="ts-fadeInUp" data-delay=".4s">
                             <div class="card-body">
                                 <div class="d-flex align-items-center">
-                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/PriyankaRana.jpg"></figure>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/PriyankaRana.JPG"></figure>
                                     <h5>Priyanka Rana</h5>
                                 </div>
                                 <p class="mb-0">
@@ -398,7 +398,7 @@
                         <div class="card" data-animate="ts-fadeInUp" data-delay=".5s">
                             <div class="card-body">
                                 <div class="d-flex align-items-center">
-                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SandhyaSonde.jpg"></figure>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SandhyaSonde.JPG"></figure>
                                     <h5>Sandhya Sonde</h5>
                                 </div>
                                 <p class="mb-0">
