--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class=" navbar navbar-expand-lg navbar-light fixed-top ts-separate-bg-element">
                 <div class="container  " >
                     <a class="navbar-brand" href="#page-top">
-                        <img src="assets/img/SokraLogo.png"  alt="">
+                        <img src="assets/img/SokraLogo.svg"  alt="">
                     </a>
                     <!--end navbar-brand--><!-- style="height: auto; width:auto" -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -232,8 +232,8 @@
                                         </figure>
                                         <p style="color:#ffffff;font-size:17px; font-family: 'Nunito',sans-serif;"class="mb-0 ts-opacity__80">
                                             <strong style="font-size:25px;">Students</strong><br>
-                                            (Through YouTube and App)
-                                        </p>
+<!--                                             (Through YouTube and App)
+ -->                                        </p>
                                        <!--  <h3 style="color:#ffffff">Students</h3> -->
                                         <!-- <p style="color:#ffffff" class="mb-0 ts-opacity__80">
                                         </p>
@@ -251,10 +251,11 @@
                                         <figure class="icon">
                                             <img src="assets/img/200.png" alt="">
                                         </figure>
-                                        <p style="color:#ffffff;font-size:25px; font-family: 'Nunito',
+                                        <p style="color:#ffffff;font-size:17px; font-family: 'Nunito',
                                         sans-serif;"class="mb-0 ts-opacity__80">
-                                         <strong>Videos</strong>
-                                        </p>
+                                         <strong style="font-size:25px;" >Videos</strong><br>
+<!--                                          200+ Videos
+ -->                                        </p>
 
                                     </div>
                                     
@@ -275,8 +276,8 @@
                                         <p style="color:#ffffff;font-size:17px; font-family: 'Nunito',
                                         sans-serif;"class="mb-0 ts-opacity__80">
                                             <strong style="font-size:25px;">Teachers</strong><br>
-                                            Our Teachers
-                                        </p>
+<!--                                             On our platform
+ -->                                        </p>
 
                                         <!--end icon-->
                                     </div>
