--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class=" navbar navbar-expand-lg navbar-light fixed-top ts-separate-bg-element">
                 <div class="container  " >
                     <a class="navbar-brand" href="#page-top">
-                        <img src="assets/img/SokraLogo.svg"  alt="">
+                        <img src="assets/img/SokraLogo1.svg"  alt="">
                     </a>
                     <!--end navbar-brand--><!-- style="height: auto; width:auto" -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
