--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="ThemeStarz">
@@ -14,9 +15,12 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 	<title>SokraAcademy</title>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
+<!--     <lottie-player src="<https://assets8.lottiefiles.com/packages/lf20_5pXvNC.json>" background="transparent"  speed="1"  style="width: 300px; height: 300px;" loop controls autoplay></lottie-player>
+ -->
     <div class="ts-page-wrapper" id="page-top">
         <!--***********HERO***********************************************************************************-->
         <header id="ts-hero" class=" ts-separate-bg-element">
@@ -567,6 +571,8 @@ function closeForm() {
     <script src="assets/js/jquery.validate.min.js"></script>
     <script src="assets/js/jquery-validate.bootstrap-tooltip.min.js"></script>
     <script src="assets/js/custom.js"></script>
+<!--     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+ --> <!-- <lottie-player src="https://assets3.lottiefiles.com/packages/lf20_Gh0AU0.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop controls autoplay></lottie-player>
 
 </body>
 </html>
