--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- class="has-loading-screen"
  --></head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
-         <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="3"  style="width: 300px; padding-top: 300px" loop centre controls autoplay>
+         <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="3"  style="width: 400px;" loop centre controls autoplay>
         
     </lottie-player>
    
