--- a/index.html
+++ b/index.html
@@ -481,11 +481,11 @@
  -->                            <div class="card-body">
                                         <h4 class="mb-0 ts-opacity__80">
                                         Contact</h4>
-                                <div class="d-flex align-items-center">
+                                <!-- <div class="d-flex align-items-center">
                                         
-                                  <!--   <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.jpg"></figure> -->
-<!--                                     <h5>Priyanka</h5>
- -->                                </div><br>
+                                    <figure class="ts-circle__xs ts-shadow__sm mr-3" data-bg-image="assets/img/SharayuKadam.jpg"></figure>
+                                     <h5>Priyanka</h5>
+                                 </div><br> -->
                                 <p class="mb-0">
                                     <h4>PRIYANKA NALAWADE<br></h4>
                                     Phone Number:8459303920<br>
