--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- class="has-loading-screen"
  --></head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
-         <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="2"  style="width: 400px;" loop controls autoplay>
+         <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="2"  style="width:25%;" loop controls autoplay>
         
     </lottie-player>
    
@@ -568,8 +568,8 @@ function closeForm() {
         window.addEventListener('load', function(){
         //  preloader.style.display = 'none';
         //  })
-                loading.style.height="100px";
-                loading.style.width="100px";
+                loading.style.height="50px";
+                loading.style.width="50px";
                 loading.style.borderRadius="50%";
                 loading.style.visibility="hidden";
 
