--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 <!-- class="has-loading-screen"
  --></head>
 <body data-spy="scroll" data-target=".navbar" class="has-loading-screen">
-         <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="0.5"  style="width:100px;" loop controls autoplay>
+         <!-- <lottie-player id="loading" src="https://raw.githubusercontent.com/okbyeokbye/dfkvdkljvdklf/master/animation.json"  background="transparent" speed="0.5"  style="width:100px;" loop controls autoplay>
         
-    </lottie-player>
+    </lottie-player> -->
    
      <div class="ts-page-wrapper" id="page-top">
         <!--***********HERO***********************************************************************************-->
@@ -560,7 +560,7 @@ function closeForm() {
   document.getElementById("myForm").style.display = "none";
 }
 </script>
-<script>
+<!-- <script>
         // $(document).ready(function(){
             //  $('div#loading').removeAttr('id');
         // });
@@ -577,7 +577,7 @@ function closeForm() {
         // function myFunction(){
         //  preloader.style.display = 'none';
         });
-    </script>
+    </script> -->
 <script src="assets/js/custom.hero.js"></script>
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
