--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@0.3.0/dist/lottie-player.js"></script>
-  
+<!--     <script src="https://unpkg.com/@lottiefiles/lottie-player@0.3.0/dist/lottie-player.js"></script>
+ -->  
 	<title>SokraAcademy</title>
 <!-- class="has-loading-screen"
  --></head>
@@ -40,10 +40,10 @@
                     <!--end navbar-toggler-->
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav d-block d-lg-flex ml-auto text-right" style="font-weight: bold;">
-                            <a class="nav-item nav-link active ts-scroll" href="#page-top">Home <span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link ts-scroll" href="#about-me">About Us</a>
-                            <a class="nav-item nav-link ts-scroll" href="#latest-courses">Simple UI</a>
-                            <a class="nav-item nav-link ts-scroll" href="#successful-stories">Our Teachers</a>
+                            <a class="nav-item nav-link active ts-scroll" href="#home">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-item nav-link ts-scroll" href="#about-us">About Us</a>
+                            <a class="nav-item nav-link ts-scroll" href="#simple-ui">Simple UI</a>
+                            <a class="nav-item nav-link ts-scroll" href="#our-teachers">Our Teachers</a>
 
                         </div>
                         <!--end navbar-nav-->
@@ -100,7 +100,7 @@
 
             </section>
  
-            <section id="about-me" data-bg-color="#1C1A1A">
+            <section id="about-us" data-bg-color="#1C1A1A">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6"data-animate="ts-fadeInUp">
@@ -159,7 +159,7 @@
        </div>
 
            
-             <section id="latest-courses" class="ts-block pb-0" data-bg-color="#1C1A1A">
+             <section id="simple-ui" class="ts-block pb-0" data-bg-color="#1C1A1A">
                 <div class="container">
 
                     <div class="ts-title text-center">
@@ -301,7 +301,7 @@
             </section>
 
             <!--OUR TEACHERS**********************************************************************************-->
-            <div id="successful-stories" class="ts-block" data-bg-color="#4fc682"style="opacity: 80%">
+            <div id="our-teachers" class="ts-block" data-bg-color="#4fc682"style="opacity: 80%">
                 <div class="container" >
                     <div class="ts-title text-center">
                         <h2>Sokra Academy has been honoured to have teachers with decades of experience on our panel</h2>
@@ -521,7 +521,7 @@
                         <div class="text-center text-white py-4">
                          <small>support@sokra.academy |</small>
                          <small>Phone no.:7972439468 |</small>
-                         <small><a href="https://sasc.github.io/privacy.html">Privacy Policy</a></small>
+                         <small><a href="privacy.html">Privacy Policy</a></small>
 
                         </div>
                     <!--end ts-title-->
