--- a/index.html
+++ b/index.html
@@ -111,15 +111,20 @@
                                 <!--end ts-title-->
                                 <p  style="color:#A4A3A3 ; font-size: 16px;font-family: 'Nunito', sans-serif;">
                                 Sokra Academy is an initiative to digitally transform the approach towards education and make quality education available for students across various strata and geographies  
-                                </p>
-                                <div class="list-group list-group-flush mb-5" >
+                                </p><br>
+
+                                <h4 style="color:#ffffff">Our Mission</h4>
+                                <p  style="color:#A4A3A3;  font-size: 15px;" >
+                                        To enable every student with access to quality education and personal development guidance for zero cost</p>
+
+                            <!--     <div class="list-group list-group-flush mb-5" >
                                     <a href="#collapseOne" class="list-group-item list-group-item-action border-top-0 pl-0 font-weight-bold bg-transparent" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="collapseOne"style="color:#A6A6A6">Our Mission</a>
                                     <div class="collapse" id="collapseOne">
                                         <p class="pt-3 small" style="color:#A4A3A3;  font-size: 16px;" >
                                         To enable every student with access to quality education and personal development guidance for zero cost</p>
                                     </div>
                                   
-                                </div>
+                                </div> -->
                                 <!-- <div class="text-center text-sm-left">
                                     <a href="#" style="color:#222222" class="btn btn-primary mr-3 my-2">Contact Us</a>
                                      <a href="#" class="btn btn-outline-dark ts-btn-border-muted my-2">Get an Appointment</a> 
