--- a/privacy.html
+++ b/privacy.html
@@ -32,8 +32,10 @@
                     <!--end navbar-toggler-->
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav d-block d-lg-flex ml-auto text-right" style="font-weight: bold;">
-                            <a class="nav-item nav-link active ts-scroll" href="#privacy">Privacy<span class="sr-only">(current)</span></a>
-                            <a class="nav-item nav-link ts-scroll" href="#security">Security</a>
+                         <a class="nav-item nav-link active ts-scroll" href="#terms">Terms<span class="sr-only">(current)</span></a>
+                         <a class="nav-item nav-link ts-scroll" href="#refund">Refund</a>
+			<a class="nav-item nav-link active ts-scroll" href="#privacy">Privacy<span class="sr-only">(current)</span></a>
+                         <a class="nav-item nav-link ts-scroll" href="#security">Security</a>
 
                         </div>
                         <!--end navbar-nav-->
