--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                         <div class="text-center text-white py-4">
                          <small>support@sokra.academy |</small>
                          <small>Phone no.:7972439468 |</small>
-                         <small><a href="privacy.html">Privacy Policy</a></small>
+                         <small><a href="terms.html">Terms and Conditions</a></small>
 
                         </div>
                     <!--end ts-title-->
