--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </nav>
 
         </header>
+	     <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HFmWfqrBwEnHdC" async> </script> </form>
     
         <main id="ts-content">
           <!--CONTENT ********************************************************************************************-->
