--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                         <div class="col-sm-6" style="padding-top: 80px">
                             <div class="ts-block pr-3">
                                 <div class="ts-title" >
-				<form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HFmWfqrBwEnHdC" async> </script> </form>
+                                
+				<!-- <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_HFmWfqrBwEnHdC" async> </script> </form> -->
                                     <h1 data-animate="ts-fadeInUp"style="color:#ffffff; font-size: 50px">Redefine the Learning 
                                         <br> Experience in India</h1>
                                 </div>
@@ -83,6 +84,10 @@
                                         <!--end ts-title-->
                                          <a href="https://play.google.com/store/apps/details?id=com.sokra.academy&hl=en_IN&gl=US" class="btn btn-primary btn-lg ts-scroll mr-4" data-animate="ts-fadeInUp" data-delay=".2s" style="color:#222222">
                                                 Download Now 
+                                            </a>
+
+                                              <a href="supportus.html" class="btn btn-primary btn-lg ts-scroll mr-4" data-animate="ts-fadeInUp" data-delay=".2s" style="color:#222222">
+                                                Support Us
                                             </a>
                                 </section>
                             </div>
