--- a/supportus.html
+++ b/supportus.html
@@ -46,12 +46,13 @@
 
                             </p>
                             <p style="color:#ffffff;"> 
-                             However at this point in order to expand our mission and maintain the absolute standards in the quality of the material, we need your help and support.We would ask you to please consider donating a small amount  (No act of kindness, no matter how small, is ever wasted) to help us achieve our goal of not letting any person lack their right to get the best education irrespective of their personal,financial and language barriers.
+                             However at this point in order to expand our mission and maintain the absolute standards in the quality of the material, we need your help and support. We would ask you to please consider donating a small amount  (No act of kindness, no matter how small, is ever wasted) to help us achieve our goal of not letting any person lack their right to get the best education irrespective of their personal,financial and language barriers.
 
                             </p>
                             <p style="color:#ffffff;"> 
                             Any and all support is greatly appreciated. We’re just excited to know that this idea is liked and our work is appreciated!  Thank you for being a part of our community and our story. 
                             </p>
+			     <h3 style="color:#ffffff;padding-top: 40px">How I can support?</h3>
                     </div>
                      <div class="w3-container" align="Center" >
                         
