--- a/supportus.html
+++ b/supportus.html
@@ -53,6 +53,8 @@
                             Any and all support is greatly appreciated. We’re just excited to know that this idea is liked and our work is appreciated!  Thank you for being a part of our community and our story. 
                             </p>
 			     <h3 style="color:#ffffff;padding-top: 40px">How I can support?</h3>
+			      <p style="color:#ffffff;"> 
+                           We pay  some amount of money to our teachers for their contribution. This differs w.r.t  different standards and languages. 1800 rs. (26$ ) is the average cost we bear per video. You can sponsor one video by paying this amount. We add sponsored credits in description on youtube. Click on the button below to support us. Any and all support is greatly appreciated.</p>
                     </div>
                      <div class="w3-container" align="Center" >
                         
